test/mutation_analysis/s0496_next_greater_element_i/hafis/ablation_o3_r50/mutants/17/result.txt
./test/mutation_analysis/s0496_next_greater_element_i/hafis/ablation_o3_r50/mutants/17/Solution.java:31: error: unreachable statement
                while (false) {
                              ^
1 error
